create github pages

--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section content5 cid-r6QkFQMK8n" id="content5-53">
+<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="mbr-section content5 cid-r6QkFQMK8n" id="content5-53">
 
     
 
@@ -253,7 +253,7 @@
                         </div>
                         <div class="user_text pb-3">
                             <p class="mbr-fonts-style display-7"><strong>
-                                Aaron Akers</strong><br>Licensed Agent  Specializing in Home, Auto &amp; Commercial Insurance<strong><br></strong><br><br>Hi, my name is Aaron and I am the newest member of the Barrett Insurance family. I was born and raised in Hudson, MI and recently moved back to the area to be closer to family. I am a graduate of Spring Arbor University and hold a Bachelor of Arts Degree in Mathematics. 
+                                Aaron Akers</strong><br>Licensed Agent, Website Designer and Marketing Team<strong><br></strong><br><br>Hi, my name is Aaron and I am the newest member of the Barrett Insurance family. I was born and raised in Hudson, MI and recently moved back to the area to be closer to family. I am a graduate of Spring Arbor University and hold a Bachelor of Arts Degree in Mathematics. 
 <br>
 <br>Prior to my work in the insurance field, I taught both middle school and high school mathematics. I married my wife Abby in January of 2017 and my beautiful baby girl Alexia was born in August of 2018. Our daughter has been the source of many exciting new adventures including a brand new career in the insurance industry. 
 <br>
@@ -317,7 +317,7 @@
                         </div>
                         <div class="user_text pb-3">
                             <p class="mbr-fonts-style display-7"><strong>Douglas Jones
-<br></strong>Marketing Director<br><br>I am a business executive possessing 15 years of experience. I serve as Marketing Director for Barrett Insurance. In this role, I am responsible for leading the company’s endeavors in the areas of business development and marketing initiatives. I place emphasis on brand management and utilize my entrepreneurial spirit and extensive leadership experience in an effort to drive Barrett Insurance to its full organizational potential. 
+<br></strong>Marketing Team<br><br>I am a business executive possessing 15 years of experience. I serve as Marketing Director for Barrett Insurance. In this role, I am responsible for leading the company’s endeavors in the areas of business development and marketing initiatives. I place emphasis on brand management and utilize my entrepreneurial spirit and extensive leadership experience in an effort to drive Barrett Insurance to its full organizational potential. 
 <br>
 <br>I hold degrees in both Sociology and Political Science from the University of Michigan. 
 <br>
