--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
 
     
 
@@ -126,7 +126,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCy9r70T3NYf3PhvVflTo0_zdif2_IoIYs&amp;q=place_id:ChIJu45q-rhtPYgRx17KrfbYIwQ" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAEIpgj38KyLFELm2bK9Y7krBkz1K-cMq8&amp;q=place_id:ChIJu45q-rhtPYgRx17KrfbYIwQ" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 
@@ -142,7 +142,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="QAuu4/CWh29WwLTV8sSEUGsA/7bodQCa3dFqhm77czQNjkxO6daLo+HwoI20xbxlE2MmoEH6d5VL09GEM38At38Rq1KUsQo3StOpjN1a0mW/WNYHGbKvwpvgaUyZTPmZ">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Yse2a3UjSiadyCHhdXuswdKwbNF5EGsu8wHEf+Q31M4Upa9hQda+AURwSaT0sUxLHhWoVoiwR5v44KNSjBHIm7GnMGgwz0cIzK8aIxrQlh4iABbwPru+UrRggxTZkaD/">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
@@ -312,9 +312,7 @@ in<br>Home, Auto &amp; Commercial Insurance</p>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5"><strong>
                             Aaron Akers</strong></h4>
-                        <p class="mbr-text mbr-fonts-style display-4">Licensed Agent Specializing
-in<br>Home, Auto &amp;
-Commercial Insurance</p>
+                        <p class="mbr-text mbr-fonts-style display-4">Licensed Agent, Website Designer<br>and Marketing Team</p>
                         <!--Btn-->
                         <div class="mbr-section-btn align-left"><a href="aaron.html" class="btn btn-primary display-4">
                                 Contact Aaron</a></div>
@@ -366,7 +364,7 @@ Commercial Insurance</p>
                     <div class="card-box pb-md-5">
                         <h4 class="card-title mbr-fonts-style display-5"><strong>
                             Doug Jones</strong></h4>
-                        <p class="mbr-text mbr-fonts-style display-4">Marketing Director<br><br></p>
+                        <p class="mbr-text mbr-fonts-style display-4">Marketing Team<br><br></p>
                         <!--Btn-->
                         <div class="mbr-section-btn align-left"><a href="doug.html" class="btn btn-primary display-4">
                                 Contact Doug</a></div>
