--- a/cyndi.html
+++ b/cyndi.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -157,7 +157,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="jnu/I2P0kwEYD4YPIA85z+gxod2eXd29grkMSgvWUc1KOR6pIt7qABofdAwSLsIZ+92SY9hFHIZuMQEj478NbGG7GAUQoItGY3eUoEQF18XbWSaD/Q25pawWFdUbza4h">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="P/S1JjxjVUu4JA8AKjG1e5iwacAjFkSN1xf+S0L6MaxIP61VHzglq/KgoiP+jAzPCXDzwzG9ianv+yEDGdHN71uUsYe8woZb3zpG99Wh4MVGv7Fdr6V3howkI/uXb1i3">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
