--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
+<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
 
     
 
@@ -126,7 +126,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAEIpgj38KyLFELm2bK9Y7krBkz1K-cMq8&amp;q=place_id:ChIJu45q-rhtPYgRx17KrfbYIwQ" allowfullscreen=""></iframe></div>
+                <div class="google-map"></div>
             </div>
             <div class="col-md-6">
                 
@@ -142,7 +142,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Yse2a3UjSiadyCHhdXuswdKwbNF5EGsu8wHEf+Q31M4Upa9hQda+AURwSaT0sUxLHhWoVoiwR5v44KNSjBHIm7GnMGgwz0cIzK8aIxrQlh4iABbwPru+UrRggxTZkaD/">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="iq+k0lz7cO9YGngDKCWF7S0DwHp3ewxhNx/0KS2iMPPlrqpjf4EEz8qS2ETevs/ITmV1LoYDSf9Jh7SdTJDcrA1MkqGZDK97xMySF1OB/3gDIKj01D3frpemuHS1P3MN">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
