--- a/joe.html
+++ b/joe.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple site maker</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
 
     
 
@@ -157,7 +157,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="s8bRWOxCUu2HBwVdxSxW8KrCpRWcNA2Hpve2B/s/GkGiIEMc7L8xGxXqhITcdK016e/rtklsxwWIe94inSHKGOORASGo8lcepqMygBesrGXEayjRpxDnalt58A/JFlbu">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="aYe+99AIR7GDD38+keVUFOz3E7E/5L2TKCB3nfteXCGLcNo1RFjyhepYPOQBG7qUgAoW7Ws3iQCkd8mlHDTu8vCHe9rOPy7AxpGp48oz1P5+mA9Wy6bud133Zv//69qM">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
