create github pages

--- a/ben.html
+++ b/ben.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple site maker</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
+<section class="engine"><a href="https://mobirise.info/b">how to create a site</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
 
     
 
@@ -157,7 +157,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="J03EPlJzek7lJCNGqTlfP7QnQvQU1ap5OokFlYNafo5eEbkbd1U9Bbn/E/5JXaXebm/TgB4gj5fTIOhJYYuUUqhUm1HbKHx2wXWrJZ4ilL6Hl9Uwcobzu4aSmgeTJgNa">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ScDfJJnWagcARCLdnFUSF0zCqJw1UqE73PTQt8Sa1QIyJMVBhapeS19MXWA846Me/4AjnyQXJjYTPze7I9BDekSUj4BSK1LbF1OaLwIsC8gbPLT7OilTv63iM4uFf0Ry">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
