--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="mbr-section content5 cid-rjLHi5lPOL" id="content5-7w">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section content5 cid-rjLHi5lPOL" id="content5-7w">
 
     
 
@@ -323,7 +323,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <div data-form-alert="" hidden="">Thank you for subscribing to our newsletter!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="S+DXewVDfFz515zgaqCz7lM+GsDKzgUFjY1qO69/6GkmryYIi2MI0Vai1zdDr87wDo9AD8hRlyp2JbXJgBUKNwwXJVVnR8MyNg67QkMKs+BJ7zOUeGyy6qtlR4ezEpcp">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="F5yd+79raq5HHUQ85qaOGMl2jCZPU4UmOglhgdydzKsVz4ajDnx1x33xklZ3ciq8uKmIKjOgXeA0G9JjB2FiAYSTXNXia66g575BVK6wJNLton2+fh2OChTvDBvXu5sa">
                     <div class="mbr-subscribe input-group">
                         <input class="form-control" type="email" name="email" placeholder="Email" data-form-field="Email" required="" id="email-form3-6y">
                         <span class="input-group-btn"><button href="" type="submit" class="btn btn-primary display-4">Subscribe</button></span>
