--- a/doug.html
+++ b/doug.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">free website design templates</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
 
     
 
@@ -157,7 +157,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ZDhemdycA1Pz6ourzTjhlwT1+ozRaXk0hfa2UQr4sJPGnRXPdw5Y4WuAPgQ4qWLfEhiswLQzCIXXTP+uMsIHiLB20L/9Fde2SWNGemwSmrhyQ5gfOWKrEekT9e4ohdOg">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="EgxPu+p27p55gcDBalVQJ5xdLbzQCL7LK/wGF07m/Ccltjofou3KzxL+v72uiGPJTHY8knQRTRfAYVv572C6JySlTRWYjTHJltbK0VGyz9+7VFdAXEatnJUqT8fDv9Hr">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
