--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
+<section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
 
     
 
@@ -126,7 +126,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <div class="google-map"></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCx3d07zxHPLvkFBLlAR3Ng8a9wsAsGoJ8&amp;q=place_id:ChIJu45q-rhtPYgRx17KrfbYIwQ" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 
@@ -142,7 +142,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="dpRoFm98GJXONM99CBMGPpdHtNAHp0D/gxPk+uHG3q2rXNOfNl2xd7dWowHZBo2fA8faCSv9Z0Gvu6K5iWyKVGpZuqLDOeraZYIKoSerTd2+wWcjxlGxJpUk35mvmp0d">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="pcNf4CcL16adxKa8qeQCaE0erLXyuhaS2gsVJD0PXBqemw9hTNYvuXJrW62khwRKjPhHL0hNKqvhnafc5C4zxAiSar/OMckpstRRIz/tGHf8rlynrdk62A8t6xApur8j">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
