--- a/cyndi.html
+++ b/cyndi.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html web templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -157,7 +157,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="aI+2N7L1iRxQS/SOhfMxXTVlq3QOZh5eRcwWx1Mr5L8jrgfVkJiqQNGJwPAHxsoxzkiODQ6kC/EIoJoMqbEvxyB7oPL4AzrJB+CYtGwuDfC61GJ29NGdT79sY/7min47">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Ujc3bplqQDls66kiVPq4CONVFw6c8eUZMi5mkI2eUqdT330TxNEUsVGYX1evI+Jl91OiTwrhd+rTcfY8irUJWx1p1q/G3GNzr656aSrkYzl9LYF3Zxmm9Ba6+BX5Twte">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
