--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio web templates</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
 
     
 
@@ -142,7 +142,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="dg72eKA5eVK1tHUPfUgLaCnHI4P13irTyqTN1gRfrpCeIaJIy9tJTU6SbGogM83d9ICWSGWSiiRuW0Pd23tzBLUgXLKFivpfXMB1TBanBrC+F0KB3T8zIuNXp59IU1mB">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="5SzYK1akpCvwLsGGC8KEVyZ5jowoe+PrvMhUorwxVezqFy4mfIo6gODzhUATNjKMc5NdLrkHoLk0Q/aVd73u9T3mgpLVAyRZRaY1j2TBD5Nleeg2U2jN127ALXBe1UZi">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
@@ -366,7 +366,7 @@ in<br>Home, Auto &amp; Commercial Insurance</p>
                         <h4 class="card-title mbr-fonts-style display-5">&nbsp; &nbsp;&nbsp;</h4>
                         <p class="mbr-text mbr-fonts-style display-4">&nbsp; &nbsp;&nbsp;<br><br></p>
                         <!--Btn-->
-                        <div class="mbr-section-btn align-left"><a href="doug.html" class="btn btn-secondary-outline display-4">&nbsp; &nbsp; &nbsp;</a></div>
+                        <div class="mbr-section-btn align-left"><a href="doug.html" class="btn btn-secondary display-4">&nbsp; &nbsp; &nbsp;</a></div>
                     </div>
                 </div>
             </div>
