--- a/cyndi.html
+++ b/cyndi.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -157,7 +157,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="E2GJa8RT/AZjCxrhOaVMhBn7X93WxHDXd78hR3WO6zjUJ3htX0VMQeMC6qbZAP3DPuIVcddGy5WQSKCCrTVmNano1tWzgZTxPTwa+VaM8wXZ3ihdYhCjYP2V0b7yAdRi">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="7SKvRjzS+k1QS2/b6ocoQCL1/3IjocVOaNtK5nrRpIsVI70haM5J+ZoUz6kp/kfgyEGJeuI71yS/QZE9UHGKee8bo1AuGLH9MRtuHhW9l8rNuBOEVoiqtSeupF5lu7pU">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
