--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">make a website for free</a></section><section class="mbr-section content5 cid-r6QkFQMK8n" id="content5-53">
+<section class="engine"><a href="https://mobirise.info/o">portfolio web templates</a></section><section class="mbr-section content5 cid-r6QkFQMK8n" id="content5-53">
 
     
 
@@ -237,7 +237,7 @@
                             <img src="assets/images/dsc0188-1-400x267.png" alt="" title="">
                         </div>
                         <div class="user_text pb-3">
-                            <p class="mbr-fonts-style display-7"><strong>Ben Judsen</strong><br>Licensed Agent  Specializing in Life &amp; Health Insurance<strong><br></strong><br>Before I decided to work in the insurance field, I was a store director for Wal-Mart, Meijer, and a few other retailers. I felt the need to move into a career that would allow me to do some real good. I earned my first insurance license in 2010. I specialize in health, life, and disability insurance. In 2016, I joined the Hillsdale Rotary Club, which makes a difference in our community. 
+                            <p class="mbr-fonts-style display-7"><strong>Ben Judson</strong><br>Licensed Agent  Specializing in Life &amp; Health Insurance<strong><br></strong><br>Before I decided to work in the insurance field, I was a store director for Wal-Mart, Meijer, and a few other retailers. I felt the need to move into a career that would allow me to do some real good. I earned my first insurance license in 2010. I specialize in health, life, and disability insurance. In 2016, I joined the Hillsdale Rotary Club, which makes a difference in our community. 
 <br>
 <br>I have a degree in Music. I studied and performed opera for a few years before I decided I needed to stop traveling so frequently. I still perform once in a while. I also continue to teach voice in my spare time, as I have done for years. I enjoy spending time with my family. My beautiful wife, DeAnna, is a wonderful singer and director. My daughter, Bella, is off to college challenging her mind. 
 <br>
@@ -307,8 +307,7 @@
                         </div>
                         <div class="user_text pb-3">
                             <p class="mbr-fonts-style display-7"><strong>Douglas Jones 
-</strong><br>Marketing Team
-<br>
+</strong><br>Licensed Agent and Marketing Director&nbsp;<br>
 <br>I am a business executive possessing 15 years of experience. I serve as Marketing Director for Barrett Insurance. In this role, I am responsible for leading the company’s endeavors in the areas of business development and marketing initiatives. I place emphasis on brand management and utilize my entrepreneurial spirit and extensive leadership experience in an effort to drive Barrett Insurance to its full organizational potential. 
 <br>
 <br>I hold degrees in both Sociology and Political Science from the University of Michigan. 
