--- a/community.html
+++ b/community.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
+<section class="engine"><a href="https://mobirise.info/h">create a web page</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
 
     
 
@@ -167,7 +167,7 @@
 
         <div class="media-container-row mt-5 pt-3">
             <div class="mbr-figure" style="width: 45%;">
-                <img src="assets/images/josh-gray-use-kiley-burger-804x1094.png" alt="Mobirise" title="">
+                <img src="assets/images/59767611-2640622716008333-2151945852732571648-n-670x960.jpg" alt="Mobirise" title="">
             </div>
             <div class="tabs-container">
                 <ul class="nav nav-tabs" role="tablist">
@@ -184,16 +184,15 @@
                     <div id="tab1" class="tab-pane in active" role="tabpanel">
                         <div class="row">
                             <div class="col-md-12">
-                                <p class="mbr-text py-5 mbr-fonts-style display-7">"Congratulations to this week's Barrett Insurance Student of the Week Award of Excellence recipient, Joshua Gray! 
-<br>Joshua is a senior at Litchfield High School. 
+                                <p class="mbr-text py-5 mbr-fonts-style display-7">Congratulations to the final recipient of the Barrett Insurance Student of the Week Award of Excellence for the 2018-2019 academic calendar year, Olivia Huggett!
 <br>
-<br>According to Special Education teacher, Jeanne Doyle, “Joshua is a hard-working, responsible, kind young man. He has great school spirit and likes to be very involved with sports. Next year he plans on coming back to help with sports again.” 
+<br>Olivia is a senior at Will Carleton Academy (WCA).
 <br>
-<br>Following graduation, Joshua plans to get a job as a welder. 
+<br>According to WCA Student Services Coordinator, Mrs. Rogers, “Olivia has displayed excellent leadership skills as the President of the Student Council this year. She leads meetings efficiently, organizes and plans events, and is a positive role model for all students. Specifically, Olivia worked diligently on the 2019 Prom and it was a huge success! Many hours of her personal time were spent planning, organizing and decorating for this event. I am very proud of the way she has shown dedication to her school and peers!"
 <br>
-<br>Congratulations, Joshua! 
+<br>Congratulations, Olivia!
 <br>
-<br>Keep up your great work! &nbsp;<br></p>
+<br>Keep up your great work!<br></p>
                             </div>
                         </div>
                     </div>
@@ -223,7 +222,7 @@
                                 <p class="mbr-text py-5 mbr-fonts-style display-7"><strong>(in alphabetical order by first name) 
 </strong><br>
 <br>Adrianna Aemisegger<br>Alexis Higgins<br>Allyson Rubley,  
-<br>Alyssa Forbes<br>Alyssa Phillips<br>Angelee Coleman<br>Ashley Stead<br>Ashley Terpening<br>Blaine Randall<br>Brandon Jagielski<br>Breanna Hardin<br>Caleb Brink<br>Carter Riley<br>Cecilia Mende<br>Ciara Smalls<br>Craig Court<br>Dale Wagner<br>Gabe Healy<br>Georgia McDowell<br>Grace Gadwood<br>Grace Ollinger<br>Gracie Cook<br>Gracie Lamb<br>Hanna Korn<br>Hayley Sims<br>Hunter Rubley<br>Jacob Hart<br>Jacob Scoville<br>Jay Close<br>Jena Fellabaum<br>Joey Weidmayer<br>John Nolan<br>Joshua Gray<br>Josh Marsh<br>Julia Haire<br>Justice Geletzke<br>Kaleb Michael<br>Kaleb Voisin<br>Kamren Johnson<br>Kayla Kane<br>Keagan Gimenez<br>Kendal Cooney<br>Khyra Hickey<br>Kimball Hughes<br>Kristen Mille<br> Lige McKinney<br>Mackenzie Webb<br>Makayla Percy<br>Marshall Mapes<br>Maxim Hayes<br>Michael Jonas<br>Michael Rhoades<br>Olivia Bambacht<br>Owen Webb<br>Rachel Mitchell<br>Randal McDowel<br>Rebecca Butters<br>Ryan Reiniche<br>Thomas Hull<br>Timothy Hardway<br>Zach WIlson</p>
+<br>Alyssa Forbes<br>Alyssa Phillips<br>Angelee Coleman<br>Ashley Stead<br>Ashley Terpening<br>Blaine Randall<br>Brandon Jagielski<br>Breanna Hardin<br>Caleb Brink<br>Carter Riley<br>Cecilia Mende<br>Ciara Smalls<br>Craig Court<br>Dale Wagner<br>Gabe Healy<br>Georgia McDowell<br>Grace Gadwood<br>Grace Ollinger<br>Gracie Cook<br>Gracie Lamb<br>Hanna Korn<br>Hayley Sims<br>Hunter Rubley<br>Jacob Hart<br>Jacob Scoville<br>Jay Close<br>Jena Fellabaum<br>Joey Weidmayer<br>John Nolan<br>Joshua Gray<br>Josh Marsh<br>Julia Haire<br>Justice Geletzke<br>Kaleb Michael<br>Kaleb Voisin<br>Kamren Johnson<br>Kayla Kane<br>Keagan Gimenez<br>Kendal Cooney<br>Khyra Hickey<br>Kimball Hughes<br>Kristen Mille<br> Lige McKinney<br>Mackenzie Webb<br>Makayla Percy<br>Marshall Mapes<br>Maxim Hayes<br>Michael Jonas<br>Michael Rhoades<br>Olivia Bambacht<br>Olivia Huggett<br>Owen Webb<br>Rachel Mitchell<br>Randal McDowel<br>Rebecca Butters<br>Ryan Reiniche<br>Thomas Hull<br>Timothy Hardway<br>Zach WIlson</p>
                             </div>
                         </div>
                     </div>
