--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
+<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
 
     
 
@@ -126,7 +126,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCx3d07zxHPLvkFBLlAR3Ng8a9wsAsGoJ8&amp;q=place_id:ChIJu45q-rhtPYgRx17KrfbYIwQ" allowfullscreen=""></iframe></div>
+                <div class="google-map"></div>
             </div>
             <div class="col-md-6">
                 
@@ -142,7 +142,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="6tY1h3Rw0s8QygOjfuhoxXGvdQy1jnx0zCnBJ1nRzWftiGcg+ZYzo16P3N3Mrlb0GPCLSFceGdN9LWd2BMOvGCTNrIyXzuwBs7YGy/yfDS1DaE2HjNLmf5fYQ5PpfxgU">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="uDlm7l6Sx/ZpD4/bR2xzX3ZCJq0WDnsMyco0wV/ewxPf0uw3gTBY+LeD2jtLiu7o19N2VZUfKC53j9gS6RkMDybRQ8o9GY804DUJM9pWN+wEE4nBlVl8DcQMUUxxPBoz">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
