create github pages

--- a/cyndi.html
+++ b/cyndi.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/q">free responsive site templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -157,7 +157,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="eYZz7ReI5HwE2r63bUbhKBH8lcXOmnaXQ4BrLLU6yLRwe9phfyUH+5atRD90JXqwfoFexN1SpKCj78q2T/whgHpFeY2+tKd1uAf1fygZMFbjiY6ZVnyhe0/RQlmpG8Qw">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="FvpeT00pPXatnyVVbMbbqPXfuvSnJKWMm/BVP5oKD9k1SMYu+F++1IcVuTvcfVvPnEQt+5K8JQMgFVQQK2iwpH/VJWHSC4xKnLfFtkNwbXIoBjJ8+GMbyUMmzP/5hAI8">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
