--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
+<section class="engine"><a href="https://mobirise.info/y">html site templates</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
 
     
 
@@ -126,7 +126,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <div class="google-map"></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCy9r70T3NYf3PhvVflTo0_zdif2_IoIYs&amp;q=place_id:ChIJu45q-rhtPYgRx17KrfbYIwQ" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 
@@ -142,7 +142,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="uDlm7l6Sx/ZpD4/bR2xzX3ZCJq0WDnsMyco0wV/ewxPf0uw3gTBY+LeD2jtLiu7o19N2VZUfKC53j9gS6RkMDybRQ8o9GY804DUJM9pWN+wEE4nBlVl8DcQMUUxxPBoz">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="yH47tVEpWrSMcpIM7J5tPxjWS83fexZfA3Urpb9lyvltzqr+96OVDaTkjIptbrERqO7Dn2+CIa3rn9sEQ2pMu0B7fgppGniELRPp+h0YhyZpIDOfe/qz+5Ropv/6O4UL">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
@@ -349,7 +349,7 @@ in<br>Home, Auto &amp; Commercial Insurance</p>
                     <div class="card-box pb-md-5">
                         <h4 class="card-title mbr-fonts-style display-5"><strong>
                             Doug Jones</strong></h4>
-                        <p class="mbr-text mbr-fonts-style display-4">Marketing Team<br><br></p>
+                        <p class="mbr-text mbr-fonts-style display-4">Licensed Agent &amp; Marketing Director</p>
                         <!--Btn-->
                         <div class="mbr-section-btn align-left"><a href="doug.html" class="btn btn-primary display-4">
                                 Contact Doug</a></div>
