--- a/doug.html
+++ b/doug.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop own website</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
+<section class="engine"><a href="https://mobirise.info/q">responsive site templates</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
 
     
 
@@ -157,7 +157,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="HbFU1PTS7GSTXX7BVAsevcyKOMV9Zt6fIUJTgmZIIofRuUVsGGmiinb/40XgL9PznqTtvFlHwwyIw0zaB8CtNNuVTPR3alMBvIevx761k65Z351G771HPtzPvX808BGi">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="tZvEV2KY1ymxGDXbt6o4aQ08Kc08wQBrvcTPxv2xrpv7+klsaUY0UIuYQlsOcmQzZNC/60lVj4U0/sXQWR5+mwocd66pCe2z74IjTfERBuOxSo1aEOfWPWqyT2Ty+v0p">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
